fixed errors overlapping issue. removed extra margin. moved errors to mat-form-field

--- a/src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
+++ b/src/app/feature/pages/ddx-kyc/ddx-kyc-phone-verification/ddx-kyc-phone-verification.component.scss
@@ -16,9 +16,9 @@
       'verification verification'
       'actions actions';
 
-    .mat-error {
-      margin-top: 13px;
-    }
+    // .mat-error {
+    //   margin-top: 13px;
+    // }
 
     .stepper-container {
       grid-area: stepper-container;
